<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_main_background">

    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/SCRL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/soapHello"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="18dp"
                android:text="@string/main_screen_hello"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="USERNAME"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="32sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/soapHello"
                app:layout_constraintTop_toBottomOf="@id/soapHello" />

            <TextView
                android:id="@+id/soapTodayMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_screen_today_message"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@id/soapHello"
                app:layout_constraintTop_toBottomOf="@id/tvUserName" />

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginEnd="16dp"
                android:padding="2dp"
                android:src="@drawable/ic_launcher_foreground"
                app:layout_constraintBottom_toBottomOf="@id/tvUserName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/soapHello"
                app:shapeAppearance="@style/roundedImageView"
                app:strokeColor="?attr/colorOnPrimary"
                app:strokeWidth="1dp" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/soapSearchBox"
                style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:foregroundTint="@color/purple_200"

                android:padding="0dp"
                app:boxCornerRadiusBottomEnd="16dp"
                app:boxCornerRadiusBottomStart="16dp"
                app:boxCornerRadiusTopEnd="16dp"
                app:boxCornerRadiusTopStart="16dp"
                app:boxStrokeColor="@color/text_input_layout_stroke_color"
                app:expandedHintEnabled="false"
                app:hintTextColor="?attr/colorOnPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/soapTodayMessage"
                app:startIconDrawable="@drawable/baseline_search_24"
                app:startIconTint="?attr/colorOnPrimary">

                <AutoCompleteTextView
                    style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_search"
                    android:textColor="?attr/colorOnPrimary" />

            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/tvCategories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/main_screen_categories_title"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/soapSearchBox" />

            <ImageView
                android:id="@+id/createCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"

                android:src="@drawable/baseline_add_24"
                app:layout_constraintBottom_toBottomOf="@id/tvCategories"
                app:layout_constraintStart_toEndOf="@id/tvCategories"
                app:layout_constraintTop_toTopOf="@id/tvCategories"
                app:layout_constraintVertical_bias="0.5"
                 />

            <androidx.recyclerview.widget.RecyclerView xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/categoriesRc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/tvCategories"
                app:layout_constraintTop_toBottomOf="@id/tvCategories"
                tools:listitem="@layout/category" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


    <LinearLayout

        android:id="@+id/contet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_background"

        android:elevation="4dp"
        android:orientation="vertical"
        app:behavior_peekHeight="?attr/actionBarSize"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:clickable="true"
            android:elevation="4dp"
            android:minHeight="48dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/today"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/main_screen_tasks_title"
                android:textColor="@color/colorOnLight"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/title_section_barrier"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="vertical"
                app:barrierDirection="bottom" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/soapDSA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/soapASD"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcTasks"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="8dp"
        android:foregroundTint="@color/white"
        android:backgroundTint="@color/colorPrimary"
        android:src="@drawable/baseline_add_24"
        app:tint="?attr/colorOnPrimary" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>